manifests/external-services/adguardhome-sync-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-sync
  namespace: external-services
  labels:
    app: adguardhome-sync
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome-sync
  template:
    metadata:
      labels:
        app: adguardhome-sync
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      containers:
        - name: adguardhome-sync
          image: ghcr.io/bakito/adguardhome-sync:v0.8.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
          args:
            - run
            - --config
            - /config/adguardhome-sync.yaml
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: config-template
          configMap:
            name: adguardhome-sync-config
        - name: config
          emptyDir: {}
