manifests/external-services/adguard-pve-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-pve
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-pve
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.16
    ports:
      - name: http
        port: 80
        protocol: TCP
