manifests/external-services/adguardhome-sync-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-sync
  namespace: external-services
  labels:
    app: adguardhome-sync
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: adguardhome-sync
