manifests/external-services/dreambox-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dreambox-external
  namespace: external-services
spec:
  clusterIP: None
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dreambox-external
  namespace: external-services
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
  labels:
    argocd.argoproj.io/instance: external-services
subsets:
  - addresses:
      - ip: 192.168.2.11
    ports:
      - port: 443
        protocol: TCP
