manifests/external-services/glances-macmini-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glances-macmini
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 61208
      targetPort: 61208
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glances-macmini
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.4
    ports:
      - name: http
        port: 61208
        protocol: TCP
