manifests/external-services/minio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: external-services
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.15
    ports:
      - name: console
        port: 9001
        protocol: TCP
      - name: api
        port: 9000
        protocol: TCP
