manifests/external-services/nextcloud-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-aio
  namespace: external-services
  annotations:
    homelab.io/expose: "public"
    homelab.io/host: "nextcloud.elmstreet79.de"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 11000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-aio
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.12
    ports:
      - name: http
        port: 11000
        protocol: TCP
