manifests/external-services/plex-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-external
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - port: 32400
      targetPort: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex-external
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.4
    ports:
      - port: 32400
