manifests/external-services/unifi-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.1
    ports:
      - name: https
        port: 443
        protocol: TCP
