manifests/external-services/vscode-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vscode
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vscode
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.4
    ports:
      - name: http
        port: 8080
        protocol: TCP
